[package]
name = "jsonbyrust"
version = "0.1.0"
authors = ["Luke Du <sinnud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#--------------------------------------------#
# compile command: cargo build --lib --bins  #
# or: cargo build --lib --bins --release     #
#--------------------------------------------#
[lib]
name = "myjson"
path = "src/myjson/mod.rs"

# [[bin]]
# name = "jsontest"
# path = "src/bin/main.rs"
[[bin]]
name = "jsontest"
path = "src/examples/ex2_jsonload.rs"

# unit test framework
[dev-dependencies]
laboratory = "2.0.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logger
log = "*"
simple_logger = "*"
