[package]
name = "jsonbyrust"
version = "0.1.0"
authors = ["Luke Du <sinnud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#--------------------------------------------#
# compile command: cargo build --lib --bins  #
# or: cargo build --lib --bins --release     #
#--------------------------------------------#
[lib]
name = "jsonparse"
path = "src/jsonparse/mod.rs"

[[bin]]
name = "jsontest"
path = "src/examples/ex1_json.rs"

[dependencies]
# logger
log = "*"
simple_logger = "*"

json = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
substring = "*"
csv = "*"